--- a/style.css
+++ b/style.css
@@ -7,9 +7,13 @@ body{
     font-size: 15px;
     font-family: 'Spartan', sans-serif;
 }
+.main{
+    min-height: 100vh;
+}
 .text-container{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    min-height: 40vh;
 }
 .products{
     margin-top: 8%;
@@ -23,7 +27,11 @@ body{
 }
 .products p{
     margin-top: 2%;
-    color: hsl(303, 10%, 53%)
+    color: hsl(303, 10%, 53%);
+    width: 79%;
+}
+.stars{
+    margin-right: 15%;
 }
 .rate-1,.rate-2,.rate-3{
     width: 65%;
@@ -31,7 +39,7 @@ body{
     padding: 1rem;
     border-radius: 10px;
     background:hsl(300, 24%, 96%);
-    justify-content: space-evenly;
+    justify-content: center;
 }
 .rate-1{
     margin-top: 8%;
@@ -53,12 +61,12 @@ body{
 .cards-container{
     display: flex;
     align-items: center;
-    margin-top: 2%;
+    min-height: 60vh;
 
 }
 .card{
     border-radius: 7px;
-    height: 225px;
+    height: 275px;
     background: hsl(300, 43%, 22%);
     width: 27%;
 }
@@ -104,4 +112,83 @@ body{
 .card-3{
     margin-top: 4%;
     margin-left: 2%;
+}
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 1100px) {
+    h2{
+        font-size: 12px;
+    }
+    .card p {
+        font-size: 12px;
+    }
+    .card{
+        height: 200px;
+    }
+
+  }
+
+  @media screen and (max-width: 1310px) {
+      .stars{
+          margin-right: 8%;
+          /* width: 50%; */
+      }
+      h2{
+        font-size: 16px;
+    }
+
+  }
+  @media screen and (max-width: 1600px) {
+      .cards-container{
+          min-height: auto;
+      }
+
+
+  }
+
+@media screen and (max-width: 414px) {
+    .text-container{
+        display: block;
+        text-align: center;
+    }
+    .products{
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+    .products p{
+        width: 100%;
+    }
+    .rate-1,.rate-2,.rate-3{
+        width: 100%;
+        display: block;
+    }
+    .rate-1 p,.rate-2 p,.rate-3 p{
+        margin-top: 2%;
+    }
+    .rate-2{
+        margin-left: 0%;
+    }
+    .rate-3{
+        margin-left: 0%;
+    }
+    .stars{
+        margin-right: 0%;
+    }
+    .cards-container{
+        display: block;
+    }
+    .card{
+        width: 100%;
+        margin: 0%;
+    }
+    .card p{
+        font-size: 15px;
+    }
+    .name{
+        margin-top: 8%;
+    }
+    .title img{
+        margin-top: 5%;
+    }
 }
