--- a/style.css
+++ b/style.css
@@ -157,7 +157,8 @@ body{
         margin-right: 0%;
     }
     h2{
-        font-size: 9px;
+        font-size: 15px;
+        margin-left: 5%
     }
     .products p{
         width: 100%;
@@ -184,10 +185,10 @@ body{
     .card{
         width: 100%;
         margin: 0%;
-        height: 300px;
+        height: 275px;
     }
     .card p{
-        font-size: 15px;
+        font-size: 13px;
     }
     .name{
         margin-top: 8%;
