--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ body{
     }
     h2{
         font-size: 15px;
-        margin-left: 5%;
+        margin-left: 30px;
     }
     .products p{
         width: 100%;
